update tambah function 8 agustus
